--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@ The Baba Dhabaleswar Temple is not only a place of worship but also a symbol of 
     <h2>Contact Us</h2>
     <p>📍 Location: Daradipal, Ghasipura, Kendujhar, Odisha</p>
     <p>📞 Contact Number: +91-9777093356</p>
+    <p>✉️ Email : babadhabaleswar.daradipal@gmail.com</p>
     <p>
       <a href="https://villageinfo.in/odisha/kendujhar/ghasipura/daradipal.html" target="_blank" style="color:#ffdd57;">About Daradipal Village</a>
     </p>
