--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@ The Baba Dhabaleswar Temple is not only a place of worship but also a symbol of 
   <section id="contact">
     <h2>Contact Us</h2>
     <p>📍 Location: Daradipal, Ghasipura, Kendujhar, Odisha</p>
-    <p>📞 Contact Number: +91-9777093356</p>
+    <p>📞 Contact Number: +91-9777093356/+91-8328860610
+                          +91-9078255467/+91-7846935087
+    </p>
     <p>✉️ Email : babadhabaleswar.daradipal@gmail.com</p>
     <p>
       <a href="https://villageinfo.in/odisha/kendujhar/ghasipura/daradipal.html" target="_blank" style="color:#ffdd57;">About Daradipal Village</a>
