--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       <a href="#gallery">Gallery</a>
       <a href="#events">Events</a>
       <a href="#contact">Contact</a>
+      <a href="Donation.html">Donation</a>
     </nav>
   </header>
 
