--- a/Donation.html
+++ b/Donation.html
@@ -5,6 +5,8 @@
 </head>
 <body>
   <h1>Scan and Donate</h1>
+  <a href="upi://pay?pa=9007397566@ybl">Pay</a>
+  
   <img src="QRCode.jpg" alt="Shiv Temple Inside View">
 </body>
 </html>
