--- a/Donation.html
+++ b/Donation.html
@@ -4,9 +4,8 @@
   <title>Babadhabaleswartrustqrcode</title>
 </head>
 <body>
-  <h1>Scan and Donate</h1>
-  <a href="upi://pay?pa=9007397566@ybl">Pay</a>
-  
+  <h1 href="upi://pay?pa=9007397566@ybl">Pay Through UPI</h1>
+  <h1>Pay Through QR Code</h1>
   <img src="QRCode.jpg" alt="Shiv Temple Inside View">
 </body>
 </html>
