--- a/Donation.html
+++ b/Donation.html
@@ -4,7 +4,7 @@
   <title>Babadhabaleswartrustqrcode</title>
 </head>
 <body>
-  <h1 href="upi://pay?pa=9007397566@ybl">Pay Through UPI</h1>
+  <a href="upi://pay?pa=9007397566@ybl" style="font-size:24px;>Pay Through UPI</a>
   <h1>Pay Through QR Code</h1>
   <img src="QRCode.jpg" alt="Shiv Temple Inside View">
 </body>
